# internal/service/GetUserIncomingFriendsRequests.go
@@ -1,24 +1,28 @@
 package service
 
 import (
+	"backend/internal/middlewares"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
-// GetIncomingFriendsRequests godoc
+// GetUserIncomingFriendsRequests godoc
 // @Summary returns user's incoming friends requests
 // @Tags friends
 // @Accept json
 // @Produce json
 // @Success 200 {array} Friend
 // @Router /user/friends/requests/incoming [get]
-func (s *Service) GetIncomingFriendsRequests(c *gin.Context) {
-	// TODO: Extract user ID from authentication context
-	// For now, using hardcoded user ID like in GetMyWishlists
-	userID := int64(1)
+// @Security ApiKeyAuth
+func (s *Service) GetUserIncomingFriendsRequests(c *gin.Context) {
+	authData := middlewares.GetInitDataFromContext(c)
+	if authData == nil {
+		c.AbortWithStatus(http.StatusUnauthorized)
+		return
+	}
 
-	requests, err := s.db.GetIncomingFriendsRequests(c, userID)
+	requests, err := s.db.GetIncomingFriendsRequests(c, authData.User.ID)
 	if err != nil {
 		c.Error(err)
 		c.Status(http.StatusInternalServerError)
